@@ -5,3 +5,4 @@ from geotrek.feedback import models as feedback_models
 
 
 admin.site.register(feedback_models.ReportCategory, TranslationAdmin)
+admin.site.register(feedback_models.ReportStatus)
