@@ -24,6 +24,7 @@ CHANGELOG
 * Show paths extremities on map (fixes #355)
 * Close calendar after date choice in intervention form (fixes #928)
 * Renamed Attachment submit button (fixes #925)
+* Added status field on feedback reports (fixes #1075)
 
 ** Bug fixes **
 
